Extend Jest test timeout.

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
       "json",
       "ts"
     ],
+	"testTimeout": 30000,
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
