--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     ],
     "testTimeout": 90000,
     "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
+    "testRegex": ".*\\.(spec|e2e-spec)\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
