--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "entry-point-gas-estimations": "^0.0.19",
+    "fast-shuffle": "^6.1.0",
     "joi": "^17.13.0",
     "js-yaml": "^4.1.0",
     "reflect-metadata": "^0.2.0",
