--- a/src/config/default.yaml
+++ b/src/config/default.yaml
@@ -2,6 +2,7 @@ app:
   port: 3000
 
 onChain:
+  chainName: "sepolia"
   entryPoint: "0x5ff137d4b0fdcd49dca30c7cf57e578a026d2789"
   beneficiary: "0x1111111111111111111111111111111111111111"
   privateKeys:
